# marrow

./: .gitignore  @AutomationLog.txt  README.md  __init__.py  competitor_matrix.md  config.py  install_linux.sh  install_macos.sh  main.py  on_demand.py  pyproject.toml  server.py  test_server.py
$HOME/: Focus-Checklist.txt
actions/: __init__.py  adapters.py  app_control.py  approval.py  bootstrap.py  browser.py  capabilities.py  code_exec.py  communications.py  complex_task.py  confirm.py  delegate.py  doctor.py  executor.py  file_tools.py  memory.py  mission.py  office.py  operator_ops.py  permissions.py  process_registry.py  scheduler.py  smart_home.py  streaming.py  system.py  todo.py  verification.py  web.py
brain/: agi.py  claim_verifier.py  compression.py  context_awareness.py  context_engine.py  conversation.py  decision_engine.py  deep_reasoning.py  digital_twin.py  execution_engine.py  interrupt.py  knowledgebase.py  llm.py  mentor_proactive.py  mission.py  operator_profile.py  predictive.py  proactive.py  reasoning.py  startup.py  swarm.py  voice_input.py  wiki.py  world_model.py
capture/: audio.py  screen.py
desktop/: Package.swift
desktop/Sources/: APIClient.swift  AppBuild.swift  (+18 more)
personality/: marrow.py
storage/: cache.py  db.py  state_store.py
ui/: __init__.py  approval_dialog.py  bridge.py  claim_card.py  control_bar.py  dashboard.py  floating_panel.py  orb.py  overlay.py  settings_panel.py  toast.py  webview_window.py  ws_bridge.py
ui-tauri/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
voice/: speak.py
(+24 files in other folders)
